# agent-gym-sft

./: CLAUDE.md  QUICK_START.sh  README.md  TRAINING_GUIDE.md  agentgym-multi-env.yml  agentgym_dataset_analysis.md  data_validation_report.md  final_train.py  final_train.sh  final_train_gpu.py  prepare_agentgym_data.py  pyproject.toml  requirements.txt  setup.sh  simple_train.py  test_model.sh  train_babyai.py  train_babyai_unsloth.py  train_multi_env.sh  uv_train.sh
agentgym_data/: babyai_train.json  textcraft_train.json
